--- a/WebApp/Components/Pages/Home.razor
+++ b/WebApp/Components/Pages/Home.razor
@@ -6,6 +6,11 @@
 
 Welcome to your new app.
 This app show the basic use of an api.
+This app show the basic use of an api.
+This app show the basic use of an api.
+This app show the basic use of an api.
+This app show the basic use of an api.
+
 
 
 <CommentSection/>
